[Success] FIxed spacing issue between hero button and text

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -119,10 +119,6 @@
     margin: 0;
     padding: 0;
   }
-  .innerContainer {
-    justify-content: space-between;
-    padding: 92px 0;
-  }
   .hero,
   .backVideo {
     height: 525px;
